samples/_failures_safe/1761560301_76c2c0_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_4a7eee97.c: In function ‘main’:
./samples/SAFE/__tmp_4a7eee97.c:176:9: error: expected declaration or statement at end of input
  176 |         fflush(stdout);
      |         ^~~~~~
./samples/SAFE/__tmp_4a7eee97.c:176:9: error: expected declaration or statement at end of input
